library/src/libqundoview.h

typedef struct QIcon QIcon;
typedef struct QListView QListView;
typedef struct QMetaObject QMetaObject;
typedef struct QUndoGroup QUndoGroup;
typedef struct QUndoStack QUndoStack;
typedef struct QUndoView QUndoView;
typedef struct QWidget QWidget;
QUndoView* QUndoView_new(QWidget* parent);
QUndoView* QUndoView_new2();
QUndoView* QUndoView_new3(QUndoStack* stack);
QUndoView* QUndoView_new4(QUndoGroup* group);
QUndoView* QUndoView_new5(QUndoStack* stack, QWidget* parent);
QUndoView* QUndoView_new6(QUndoGroup* group, QWidget* parent);
QMetaObject* QUndoView_MetaObject(const QUndoView* self);
void* QUndoView_Metacast(QUndoView* self, const char* param1);
int QUndoView_Metacall(QUndoView* self, int param1, int param2, void** param3);
libqt_string QUndoView_Tr(const char* s);
QUndoStack* QUndoView_Stack(const QUndoView* self);
QUndoGroup* QUndoView_Group(const QUndoView* self);
void QUndoView_SetEmptyLabel(QUndoView* self, libqt_string label);
libqt_string QUndoView_EmptyLabel(const QUndoView* self);
void QUndoView_SetCleanIcon(QUndoView* self, QIcon* icon);
QIcon* QUndoView_CleanIcon(const QUndoView* self);
void QUndoView_SetStack(QUndoView* self, QUndoStack* stack);
void QUndoView_SetGroup(QUndoView* self, QUndoGroup* group);
libqt_string QUndoView_Tr2(const char* s, const char* c);
libqt_string QUndoView_Tr3(const char* s, const char* c, int n);